@@ -3,8 +3,9 @@
 	ACL clauses can now be negated
 	msg clauses in ACL can use format strings substitution
 	Add an ACL clause to customize X-Greylist header
-	Fix a bug in DNSRBL code (Jacques Beigbeder)
+	Fix serious bugs in DNSRBL code (Jacques Beigbeder)
 	Fix a display bug for netblocks
+	Add a time clause to match against time sets
 3.1.4
 	Add support for switching to a given group (Ralf S. Engelschall)
 	Add substitutions for sendmail macro and strftime in URL checks
